# mcp-internet

./: .gitignore  DETAILED_DOCUMENTATION.md  Dockerfile  LICENSE  LM_STUDIO_PROMPT.md  MULTI_PLATFORM_GUIDE.md  README.md  ddg_debug.html  debug_ddg.py  debug_ddg2.py  debug_ddg3.py  debug_search.py  docker-compose.yml  pyproject.toml  test_li.py  test_live.py  test_v3.py
src/mcp_internet/: __init__.py  server.py
src/mcp_internet/.cache/: mcp_cache.db
src/mcp_internet/tools/: __init__.py  currency.py  dictionary.py  email_sender.py  github.py  hackernews.py  ip_tools.py  math_tools.py  news.py  pastebin.py  pdf_reader.py  qr_code.py  reddit.py  search.py  stocks.py  time.py  translator.py  twitter.py  urls.py  weather.py  webpage.py  whois.py  youtube.py
src/mcp_internet/utils/: __init__.py  cache.py  extractors.py  http_client.py
