[project]
name = "mcp-internet"
version = "2.0.0"
description = "🌐 MCP Server that gives local LLMs internet access - 22 tools for web search, news, weather, GitHub, YouTube, and more!"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sonesh", email = "sonesh@example.com" }
]
keywords = ["mcp", "llm", "lm-studio", "ai", "internet", "tools", "search", "youtube", "github", "reddit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "ddgs>=9.0.0",
]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.10.0"]
all = ["pdfplumber>=0.10.0"]

[project.scripts]
mcp-internet = "mcp_internet.server:main"

[project.urls]
Homepage = "https://github.com/Sonesh-2202/mcp-internet"
Repository = "https://github.com/Sonesh-2202/mcp-internet"
Issues = "https://github.com/Sonesh-2202/mcp-internet/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_internet"]
